@@ -2,7 +2,7 @@
  * This file is part of Tornado: A heterogeneous programming framework:
  * https://github.com/beehive-lab/tornadovm
  *
- * Copyright (c) 2013-2020, 2023 APT Group, Department of Computer Science,
+ * Copyright (c) 2013-2020, 2023-2024, APT Group, Department of Computer Science,
  * The University of Manchester. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
@@ -52,16 +52,17 @@ import org.graalvm.compiler.graph.Graph;
 import org.graalvm.compiler.phases.util.Providers;
 
 import jdk.vm.ci.meta.ResolvedJavaMethod;
+import uk.ac.manchester.tornado.api.DRMode;
 import uk.ac.manchester.tornado.api.GridScheduler;
 import uk.ac.manchester.tornado.api.ImmutableTaskGraph;
 import uk.ac.manchester.tornado.api.KernelContext;
 import uk.ac.manchester.tornado.api.Policy;
 import uk.ac.manchester.tornado.api.TaskGraph;
-import uk.ac.manchester.tornado.api.TornadoDriver;
+import uk.ac.manchester.tornado.api.TornadoBackend;
 import uk.ac.manchester.tornado.api.TornadoExecutionPlan;
 import uk.ac.manchester.tornado.api.TornadoTaskGraphInterface;
-import uk.ac.manchester.tornado.api.common.Access;
 import uk.ac.manchester.tornado.api.common.Event;
+import uk.ac.manchester.tornado.api.common.PrebuiltTaskPackage;
 import uk.ac.manchester.tornado.api.common.SchedulableTask;
 import uk.ac.manchester.tornado.api.common.TaskPackage;
 import uk.ac.manchester.tornado.api.common.TornadoDevice;
@@ -90,6 +91,7 @@ import uk.ac.manchester.tornado.api.exceptions.TornadoRuntimeException;
 import uk.ac.manchester.tornado.api.exceptions.TornadoTaskRuntimeException;
 import uk.ac.manchester.tornado.api.profiler.ProfilerType;
 import uk.ac.manchester.tornado.api.profiler.TornadoProfiler;
+import uk.ac.manchester.tornado.api.runtime.ExecutorFrame;
 import uk.ac.manchester.tornado.api.runtime.TornadoRuntime;
 import uk.ac.manchester.tornado.api.types.arrays.DoubleArray;
 import uk.ac.manchester.tornado.api.types.arrays.FloatArray;
@@ -101,12 +103,13 @@ import uk.ac.manchester.tornado.runtime.TornadoVM;
 import uk.ac.manchester.tornado.runtime.analyzer.MetaReduceCodeAnalysis;
 import uk.ac.manchester.tornado.runtime.analyzer.ReduceCodeAnalysis;
 import uk.ac.manchester.tornado.runtime.analyzer.TaskUtils;
-import uk.ac.manchester.tornado.runtime.common.DeviceObjectState;
+import uk.ac.manchester.tornado.runtime.common.BatchConfiguration;
 import uk.ac.manchester.tornado.runtime.common.RuntimeUtilities;
 import uk.ac.manchester.tornado.runtime.common.Tornado;
-import uk.ac.manchester.tornado.runtime.common.TornadoAcceleratorDevice;
 import uk.ac.manchester.tornado.runtime.common.TornadoOptions;
 import uk.ac.manchester.tornado.runtime.common.TornadoVMClient;
+import uk.ac.manchester.tornado.runtime.common.TornadoXPUDevice;
+import uk.ac.manchester.tornado.runtime.common.XPUDeviceBufferState;
 import uk.ac.manchester.tornado.runtime.graal.compiler.TornadoSuitesProvider;
 import uk.ac.manchester.tornado.runtime.graph.TornadoExecutionContext;
 import uk.ac.manchester.tornado.runtime.graph.TornadoGraph;
@@ -130,7 +133,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
      */
     private static final boolean EXPERIMENTAL_MULTI_HOST_HEAP = false;
     private static final int DEFAULT_DRIVER_INDEX = 0;
-    private static final int PERFORMANCE_WARMUP = 3;
+    private static final int PERFORMANCE_WARMUP_DYNAMIC_RECONF_PARALLEL = 3;
     private static final boolean TIME_IN_NANOSECONDS = TornadoOptions.TIME_IN_NANOSECONDS;
     private static final String TASK_GRAPH_PREFIX = "XXX";
     private static final ConcurrentHashMap<Policy, ConcurrentHashMap<String, HistoryTable>> executionHistoryPolicy = new ConcurrentHashMap<>();
@@ -143,7 +146,8 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     private static final CompileInfo COMPILE_ONLY = new CompileInfo(true, false);
     private static final CompileInfo COMPILE_AND_UPDATE = new CompileInfo(true, true);
     private static final CompileInfo NOT_COMPILE_UPDATE = new CompileInfo(false, false);
-    private static final Pattern PATTERN_BATCH = Pattern.compile("(\\d+)(MB|mg|gb|GB)");
+    private static final Pattern SIZE_PATTERN = Pattern.compile("(\\d+)(MB|mg|gb|GB)");
+    private static final int MAX_ITERATIONS_DYNAMIC_RECONF_SEQUENTIAL = 100;
 
     private static ConcurrentHashMap<Integer, TaskGraph> globalTaskGraphIndex = new ConcurrentHashMap<>();
     private static int baseGlobalIndex = 0;
@@ -154,10 +158,12 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     private ByteBuffer hlBuffer;
     private TornadoVMBytecodeBuilder tornadoVMBytecodeBuilder;
     private long batchSizeBytes = -1;
-    private boolean bailout = false;
-    // One TornadoVM instance per TaskSchedule
-    private TornadoVM vm;
-    private Map<TornadoAcceleratorDevice, TornadoVM> vmTable;
+    private long memoryLimitSizeBytes = -1;
+
+    private TornadoVM vm;  // One TornadoVM instance per TornadoExecutionPlan
+
+    // HashMap to keep an instance of the TornadoVM per Device
+    private Map<TornadoXPUDevice, TornadoVM> vmTable;
     private Event event;
     private String taskGraphName;
     private List<TaskPackage> taskPackages;
@@ -187,6 +193,10 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     private GridScheduler gridScheduler;
 
     private ProfilerMode profilerMode;
+
+    private boolean isConcurrentDevicesEnabled;
+    private long executionPlanId;
+    private boolean bailout;
 
     /**
      * Task Schedule implementation that uses GPU/FPGA and multicore backends. This constructor must be public. It is invoked using the reflection API.
@@ -221,7 +231,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             case 0:
                 break;
             case 1:
-                task.transferToDevice(dataTransferMode, inputObjects.get(0));
+                task.transferToDevice(dataTransferMode, inputObjects.getFirst());
                 break;
             case 2:
                 task.transferToDevice(dataTransferMode, inputObjects.get(0), inputObjects.get(1));
@@ -273,10 +283,10 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             case 15:
                 task.transferToDevice(dataTransferMode, inputObjects.get(0), inputObjects.get(1), inputObjects.get(2), inputObjects.get(3), inputObjects.get(4), inputObjects.get(5), inputObjects.get(
                         6), inputObjects.get(7), inputObjects.get(8), inputObjects.get(9), inputObjects.get(10), inputObjects.get(11), inputObjects.get(12), inputObjects.get(13), inputObjects.get(
-                                14));
+                        14));
                 break;
             default:
-                System.out.println("COPY-IN Not supported yet: " + numObjectsCopyIn);
+                System.out.println(STR."COPY-IN Not supported yet: \{numObjectsCopyIn}");
                 break;
         }
     }
@@ -291,7 +301,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             case 0:
                 break;
             case 1:
-                task.transferToHost(mode, outputArrays.get(0));
+                task.transferToHost(mode, outputArrays.getFirst());
                 break;
             case 2:
                 task.transferToHost(mode, outputArrays.get(0), outputArrays.get(1));
@@ -344,7 +354,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                         outputArrays.get(7), outputArrays.get(8), outputArrays.get(9), outputArrays.get(10), outputArrays.get(11), outputArrays.get(12), outputArrays.get(13), outputArrays.get(14));
                 break;
             default:
-                System.out.println("COPY-OUT Not supported yet: " + numObjectsCopyOut);
+                System.out.println(STR."COPY-OUT Not supported yet: \{numObjectsCopyOut}");
                 break;
         }
     }
@@ -364,43 +374,6 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         }
         argumentsLookUp.remove(oldRef);
         argumentsLookUp.add(newRef);
-    }
-
-    @Override
-    public void replaceParameter(Object oldParameter, Object newParameter) {
-        // 1. Update from the streamIn list of objects
-        updateReference(oldParameter, newParameter, streamInObjects);
-
-        // 2. Update from the stream out list of objects
-        updateReference(oldParameter, newParameter, streamOutObjects);
-
-        // 3. Update from graphContext and replace the object state.
-        // Otherwise, if the object is copied in (via COPY_IN), we might think the
-        // object is already on the device heap.
-        executionContext.replaceObjectState(oldParameter, newParameter);
-
-        // 4. Update the global states array in the vm.
-        if (vm != null) {
-            vm.fetchGlobalStates();
-        }
-
-        // 5. Set the update data flag to true in order to create a new call wrapper
-        // on the device.
-        updateData = true;
-
-        // 6. Update task-parameters
-        // Force to recompile the task-sketcher
-        for (TaskPackage tp : taskPackages) {
-            Object[] params = tp.getTaskParameters();
-            for (int k = 1; k < params.length; k++) {
-                if (params[k].equals(oldParameter)) {
-                    params[k] = newParameter;
-                }
-            }
-        }
-        if (this.gridScheduler == null) {
-            triggerRecompile();
-        }
     }
 
     @Override
@@ -429,7 +402,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         newTaskGraph.streamOutObjects = Collections.unmodifiableList(this.streamOutObjects);
         newTaskGraph.hlBuffer = this.hlBuffer;
 
-        this.executionContext.createImmutableExecutionContext(newTaskGraph.executionContext);
+        newTaskGraph.executionContext = this.executionContext.clone();
 
         newTaskGraph.taskPackages = Collections.unmodifiableList(this.taskPackages);
         newTaskGraph.argumentsLookUp = Collections.unmodifiableSet(this.argumentsLookUp);
@@ -455,24 +428,57 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         return streamOutObjects;
     }
 
-    private void setProfiler(ProfilerMode profilerMode, String option) {
+    @Override
+    public void enableProfiler(ProfilerMode profilerMode) {
         this.profilerMode = profilerMode;
-        System.setProperty(TornadoOptions.PROFILER, option);
+        TornadoOptions.TORNADO_PROFILER = true;
         if (profilerMode == ProfilerMode.SILENT) {
-            System.setProperty(TornadoOptions.PROFILER_LOG, option);
+            TornadoOptions.TORNADO_PROFILER_LOG = true;
         }
     }
 
     @Override
-    public void enableProfiler(ProfilerMode profilerMode) {
-        setProfiler(profilerMode, TornadoOptions.TRUE);
+    public void disableProfiler(ProfilerMode profilerMode) {
+        TornadoOptions.TORNADO_PROFILER = false;
+        TornadoOptions.TORNADO_PROFILER_LOG = false;
+        this.timeProfiler = null;
+        this.profilerMode = null;
     }
 
     @Override
-    public void disableProfiler(ProfilerMode profilerMode) {
-        setProfiler(profilerMode, TornadoOptions.FALSE);
-        this.timeProfiler = null;
-        this.profilerMode = null;
+    public void withConcurrentDevices() {
+        this.isConcurrentDevicesEnabled = true;
+    }
+
+    @Override
+    public void withoutConcurrentDevices() {
+        this.isConcurrentDevicesEnabled = false;
+    }
+
+    @Override
+    public void withThreadInfo() {
+        meta().enableThreadInfo();
+    }
+
+    @Override
+    public void withoutThreadInfo() {
+        meta().disableThreadInfo();
+    }
+
+    @Override
+    public void withPrintKernel() {
+        meta().enablePrintKernel();
+    }
+
+    @Override
+    public void withoutPrintKernel() {
+        meta().disablePrintKernel();
+    }
+
+    @Override
+    public void withGridScheduler(GridScheduler gridScheduler) {
+        this.gridScheduler = gridScheduler;
+        checkGridSchedulerNames();
     }
 
     @Override
@@ -518,13 +524,20 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
         //Release locked buffers from the old device and lock them on the new one.
         for (LocalObjectState localState : executionContext.getObjectStates()) {
-            final GlobalObjectState globalState = localState.getGlobalState();
-            final DeviceObjectState deviceState = globalState.getDeviceState(oldDevice);
+            final DataObjectState dataObjectState = localState.getDataObjectState();
+            final XPUDeviceBufferState deviceState = dataObjectState.getDeviceBufferState(oldDevice);
             if (deviceState.isLockedBuffer()) {
                 releaseObjectFromDeviceMemory(localState, oldDevice);
                 reuseDeviceBufferObject(localState, device);
             }
         }
+
+        // Set Thread-Schedulers to Default Value
+        for (int i = 0; i < executionContext.getTaskCount(); i++) {
+            SchedulableTask task = executionContext.getTask(i);
+            task.meta().resetThreadBlocks();
+        }
+
     }
 
     private void reuseDeviceBuffersForSameDevice(TornadoDevice device) {
@@ -533,31 +546,53 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         }
     }
 
-    private void triggerRecompile() {
-        // 1. Force to recompile the task-sketcher
-        int i = 0;
-        for (TaskPackage tp : taskPackages) {
-            updateTask(tp, i);
-            i++;
+    @Override
+    public void setDevice(String taskName, TornadoDevice device) {
+
+        TornadoDevice oldDevice = meta().getLogicDevice();
+
+        // Make sure that a sketch is available for the device.
+        for (int i = 0; i < executionContext.getTaskCount(); i++) {
+            SchedulableTask task = executionContext.getTask(i);
+            String name = task.getId();
+            if (name.equals(taskName)) {
+                task.meta().setDevice(device);
+                if (task instanceof CompilableTask) {
+                    ResolvedJavaMethod method = TornadoCoreRuntime.getTornadoRuntime().resolveMethod(((CompilableTask) task).getMethod());
+                    if (!task.getDevice().getDeviceContext().isCached(method.getName(), task)) {
+                        updateInner(i, task);
+                    }
+                }
+            }
         }
 
-        // 2. Clear the code caches in every instance of a TornadoVMInterpreter that
-        // TornadoVM instantiated
-        if (vm != null) {
-            vm.clearInstalledCode();
-            vm.setCompileUpdate();
+        // Release locked buffers from the old device and lock them on the new one.
+        for (LocalObjectState localState : executionContext.getObjectStates()) {
+            final DataObjectState dataObjectState = localState.getDataObjectState();
+            final XPUDeviceBufferState deviceState = dataObjectState.getDeviceBufferState(oldDevice);
+            if (deviceState.isLockedBuffer()) {
+                releaseObjectFromDeviceMemory(localState, oldDevice);
+                reuseDeviceBufferObject(localState, device);
+            }
         }
+
+        // Set Thread-Schedulers to Default Value
+        for (int i = 0; i < executionContext.getTaskCount(); i++) {
+            SchedulableTask task = executionContext.getTask(i);
+            task.meta().resetThreadBlocks();
+        }
+
     }
 
     @Override
-    public TornadoAcceleratorDevice getDeviceForTask(String id) {
+    public TornadoXPUDevice getDeviceForTask(String id) {
         return executionContext.getDeviceForTask(id);
     }
 
     private void updateInner(int index, SchedulableTask task) {
         int driverIndex = task.meta().getDriverIndex();
-        Providers providers = TornadoCoreRuntime.getTornadoRuntime().getDriver(driverIndex).getProviders();
-        TornadoSuitesProvider suites = TornadoCoreRuntime.getTornadoRuntime().getDriver(driverIndex).getSuitesProvider();
+        Providers providers = TornadoCoreRuntime.getTornadoRuntime().getBackend(driverIndex).getProviders();
+        TornadoSuitesProvider suites = TornadoCoreRuntime.getTornadoRuntime().getBackend(driverIndex).getSuitesProvider();
 
         executionContext.setTask(index, task);
 
@@ -574,8 +609,8 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     @Override
     public void addInner(SchedulableTask task) {
         int driverIndex = task.meta().getDriverIndex();
-        Providers providers = TornadoCoreRuntime.getTornadoRuntime().getDriver(driverIndex).getProviders();
-        TornadoSuitesProvider suites = TornadoCoreRuntime.getTornadoRuntime().getDriver(driverIndex).getSuitesProvider();
+        Providers providers = TornadoCoreRuntime.getTornadoRuntime().getBackend(driverIndex).getProviders();
+        TornadoSuitesProvider suites = TornadoCoreRuntime.getTornadoRuntime().getBackend(driverIndex).getSuitesProvider();
 
         int index = executionContext.addTask(task);
 
@@ -617,9 +652,10 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         if ((task.getTaskName() != null) && (task.getId() != null)) {
             String methodName = (task instanceof PrebuiltTask prebuiltTask)
                     ? prebuiltTask.getFilename()
-                    : ((CompilableTask) task).getMethod().getDeclaringClass().getSimpleName() + "." + task.getTaskName();
+                    : STR."\{((CompilableTask) task).getMethod().getDeclaringClass().getSimpleName()}.\{task.getTaskName()}";
             timeProfiler.registerMethodHandle(ProfilerType.METHOD, task.getId(), methodName);
         }
+
     }
 
     private void updateDeviceContext() {
@@ -632,7 +668,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
      * @param setNewDevice:
      *     boolean that specifies if set a new device or not.
      */
-    private TornadoVM compile(boolean setNewDevice) {
+    private TornadoVM compileGraphAndBuildVM(boolean setNewDevice) {
         final ByteBuffer buffer = ByteBuffer.wrap(highLevelCode);
         buffer.order(ByteOrder.LITTLE_ENDIAN);
         buffer.limit(hlBuffer.position());
@@ -656,7 +692,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         return tornadoVM;
     }
 
-    private boolean compareDevices(Set<TornadoAcceleratorDevice> lastDevices, TornadoAcceleratorDevice device2) {
+    private boolean compareDevices(Set<TornadoXPUDevice> lastDevices, TornadoXPUDevice device2) {
         return lastDevices.contains(device2);
     }
 
@@ -712,12 +748,12 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         return true;
     }
 
-    private boolean compileToTornadoVMBytecode() {
+    private boolean compileComputeGraphToTornadoVMBytecode() {
         CompileInfo compileInfo = extractCompileInfo();
         if (compileInfo.compile) {
             timeProfiler.start(ProfilerType.TOTAL_BYTE_CODE_GENERATION);
             executionContext.scheduleTaskToDevices();
-            TornadoVM tornadoVM = compile(compileInfo.updateDevice);
+            TornadoVM tornadoVM = compileGraphAndBuildVM(compileInfo.updateDevice);
             vmTable.put(meta().getLogicDevice(), tornadoVM);
             timeProfiler.stop(ProfilerType.TOTAL_BYTE_CODE_GENERATION);
         }
@@ -749,11 +785,11 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     /**
      * If current FPGA execution and JIT mode, then run warm-up.
      */
-    private void preCompilationForFPGA() {
+    private void preCompileForFPGAs() {
         boolean compile = false;
         if (TornadoOptions.FPGA_EMULATION) {
             compile = true;
-        } else if (executionContext.getDeviceOfFirstTask() instanceof TornadoAcceleratorDevice tornadoAcceleratorDevice) {
+        } else if (executionContext.getDeviceOfFirstTask() instanceof TornadoXPUDevice tornadoAcceleratorDevice) {
             if (tornadoAcceleratorDevice.isFullJITMode(executionContext.getTask(0))) {
                 compile = true;
             }
@@ -793,43 +829,44 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         }
     }
 
-    private void dumpDeoptReason(TornadoBailoutRuntimeException e) {
+    private void dumpDeoptimisationReason(TornadoBailoutRuntimeException e) {
         if (!Tornado.DEBUG) {
-            System.err.println(RED + "[Bailout] Running the sequential implementation. Enable --debug to see the reason." + RESET);
-        } else {
+            System.err.println(STR."\{RED}[Bailout] Running the sequential implementation. Enable --debug to see the reason.\{RESET}");
+        }else
+
+    {
             System.err.println(e.getMessage());
             for (StackTraceElement s : e.getStackTrace()) {
-                System.err.println("\t" + s);
+                System.err.println(STR."\t\{s}");
             }
         }
     }
 
-    private void deoptimizeToSequentialJava(TornadoBailoutRuntimeException e) {
-        // Execute the sequential code
-        dumpDeoptReason(e);
+    private void deoptimiseToSequentialJava(TornadoBailoutRuntimeException e) {
+        dumpDeoptimisationReason(e);
         runAllTasksJavaSequential();
     }
 
     @Override
     public void scheduleInner() {
-        boolean compile = compileToTornadoVMBytecode();
-        TornadoAcceleratorDevice deviceForTask = executionContext.getDeviceForTask(0);
+        boolean compile = compileComputeGraphToTornadoVMBytecode();
+        TornadoXPUDevice deviceForTask = executionContext.getDeviceForTask(0);
         if (compile && deviceForTask.getDeviceContext().isPlatformFPGA()) {
-            preCompilationForFPGA();
+            preCompileForFPGAs();
         }
 
         try {
-            event = vm.execute();
+            event = vm.execute(isConcurrentDevicesEnabled, timeProfiler);
             timeProfiler.stop(ProfilerType.TOTAL_TASK_GRAPH_TIME);
             updateProfiler();
         } catch (TornadoBailoutRuntimeException e) {
             if (TornadoOptions.RECOVER_BAILOUT) {
-                deoptimizeToSequentialJava(e);
+                deoptimiseToSequentialJava(e);
             } else {
                 if (Tornado.DEBUG) {
                     e.printStackTrace();
                 }
-                throw new TornadoBailoutRuntimeException("Bailout is disabled. \nReason: " + e.getMessage());
+                throw new TornadoBailoutRuntimeException(STR."Bailout is disabled. \nReason: \{e.getMessage()}");
             }
         }
 
@@ -870,18 +907,22 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         if (Tornado.VM_USE_DEPS && event != null) {
             event.waitOn();
         } else {
-            executionContext.getDevices().stream().filter(Objects::nonNull).forEach(TornadoDevice::sync);
+            for (TornadoXPUDevice tornadoXPUDevice : executionContext.getDevices()) {
+                if (tornadoXPUDevice != null) {
+                    tornadoXPUDevice.sync(executionPlanId);
+                }
+            }
         }
     }
 
     @Override
     public void transferToDevice(final int mode, Object... objects) {
-        for (Object functionParameter : objects) {
-            if (functionParameter == null) {
-                throw new TornadoRuntimeException("[ERROR] null object passed into streamIn() in schedule " + executionContext.getId());
+        for (Object parameter : objects) {
+            if (parameter == null) {
+                throw new TornadoRuntimeException(STR."[ERROR] null object passed into streamIn() in schedule \{executionContext.getId()}");
             }
 
-            if (functionParameter instanceof Number) {
+            if (parameter instanceof Number) {
                 continue;
             }
 
@@ -889,20 +930,23 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             // EVERY_EXECUTION
             boolean isObjectForStreaming = false;
             if (mode == DataTransferMode.EVERY_EXECUTION) {
-                streamInObjects.add(functionParameter);
+                streamInObjects.add(parameter);
                 isObjectForStreaming = true;
             }
 
-            executionContext.getObjectState(functionParameter).setStreamIn(isObjectForStreaming);
-
-            argumentsLookUp.add(functionParameter);
+            executionContext.getLocalStateObject(parameter).setStreamIn(isObjectForStreaming);
 
             // List of input objects for the dynamic reconfiguration
-            inputModesObjects.add(new StreamingObject(mode, functionParameter));
+            inputModesObjects.add(new StreamingObject(mode, parameter));
 
             if (TornadoOptions.isReusedBuffersEnabled()) {
-                lockObjectsInMemory(functionParameter);
+                if (!argumentsLookUp.contains(parameter)) {
+                    // We already set function parameter in transferToHost
+                    lockObjectsInMemory(parameter);
+                }
             }
+
+            argumentsLookUp.add(parameter);
         }
     }
 
@@ -928,19 +972,22 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
             // If the object mode is set to LAST then we *only* insert it in the lookup
             // hash-set.
-            if (mode != DataTransferMode.USER_DEFINED) {
+            if (mode != DataTransferMode.UNDER_DEMAND) {
                 streamOutObjects.add(functionParameter);
-                executionContext.getObjectState(functionParameter).setStreamOut(true);
+                executionContext.getLocalStateObject(functionParameter).setStreamOut(true);
             }
-
-            argumentsLookUp.add(functionParameter);
 
             // List of output objects for the dynamic reconfiguration
             outputModeObjects.add(new StreamingObject(mode, functionParameter));
 
-            if (TornadoOptions.isReusedBuffersEnabled()) {
-                lockObjectsInMemory(functionParameter);
+            if (TornadoOptions.isReusedBuffersEnabled() || mode == DataTransferMode.UNDER_DEMAND) {
+                if (!argumentsLookUp.contains(functionParameter)) {
+                    // We already set function parameter in transferToDevice
+                    lockObjectsInMemory(functionParameter);
+                }
             }
+
+            argumentsLookUp.add(functionParameter);
         }
     }
 
@@ -971,7 +1018,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         getDevice().getDeviceContext().setResetToFalse();
         timeProfiler.clean();
 
-        compileToTornadoVMBytecode();
+        compileComputeGraphToTornadoVMBytecode();
         vm.warmup();
 
         if (TornadoOptions.isProfilerEnabled() && !TornadoOptions.PROFILER_LOGS_ACCUMULATE()) {
@@ -980,13 +1027,13 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     private void reuseDeviceBufferObject(Object object) {
-        final LocalObjectState localState = executionContext.getObjectState(object);
+        final LocalObjectState localState = executionContext.getLocalStateObject(object);
         reuseDeviceBufferObject(localState, meta().getLogicDevice());
     }
 
     private void reuseDeviceBufferObject(final LocalObjectState localState, final TornadoDevice device) {
-        final GlobalObjectState globalState = localState.getGlobalState();
-        final DeviceObjectState deviceState = globalState.getDeviceState(device);
+        final DataObjectState dataObjectState = localState.getDataObjectState();
+        final XPUDeviceBufferState deviceState = dataObjectState.getDeviceBufferState(device);
         deviceState.setLockBuffer(true);
     }
 
@@ -1005,21 +1052,21 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         if (vm == null) {
             return;
         }
-        inputModesObjects.forEach(streamingObject -> freeDeviceMemoryObject(streamingObject.getObject()));
-        outputModeObjects.forEach(streamingObject -> freeDeviceMemoryObject(streamingObject.getObject()));
+        inputModesObjects.forEach(inputStreamObject -> freeDeviceMemoryObject(inputStreamObject.getObject()));
+        outputModeObjects.forEach(outputStreamObject -> freeDeviceMemoryObject(outputStreamObject.getObject()));
     }
 
     private void freeDeviceMemoryObject(Object object) {
-        final LocalObjectState localState = executionContext.getObjectState(object);
+        final LocalObjectState localState = executionContext.getLocalStateObject(object);
         releaseObjectFromDeviceMemory(localState, meta().getLogicDevice());
     }
 
     private void releaseObjectFromDeviceMemory(final LocalObjectState localState, final TornadoDevice device) {
-        final GlobalObjectState globalState = localState.getGlobalState();
-        final DeviceObjectState deviceState = globalState.getDeviceState(device);
-        deviceState.setLockBuffer(false);
-        if (deviceState.hasObjectBuffer()) {
-            device.deallocate(deviceState);
+        final DataObjectState dataObjectState = localState.getDataObjectState();
+        final XPUDeviceBufferState deviceBufferState = dataObjectState.getDeviceBufferState(device);
+        deviceBufferState.setLockBuffer(false);
+        if (deviceBufferState.hasObjectBuffer()) {
+            device.deallocate(deviceBufferState);
         }
     }
 
@@ -1034,18 +1081,65 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     private Event syncObjectInner(Object object) {
-        final LocalObjectState localState = executionContext.getObjectState(object);
-        final GlobalObjectState globalState = localState.getGlobalState();
-        final TornadoAcceleratorDevice device = meta().getLogicDevice();
-        final DeviceObjectState deviceState = globalState.getDeviceState(device);
+        final LocalObjectState localState = executionContext.getLocalStateObject(object);
+        final DataObjectState dataObjectState = localState.getDataObjectState();
+        final TornadoXPUDevice device = meta().getLogicDevice();
+        final XPUDeviceBufferState deviceState = dataObjectState.getDeviceBufferState(device);
         if (deviceState.isLockedBuffer()) {
-            return device.resolveEvent(device.streamOutBlocking(object, 0, deviceState, null));
+            return device.resolveEvent(executionPlanId, device.streamOutBlocking(executionPlanId, object, 0, deviceState, null));
+        }
+        return null;
+    }
+
+    private Event syncObjectInner(Object object, long offset, long partialCopySize) {
+        final LocalObjectState localState = executionContext.getLocalStateObject(object);
+        final DataObjectState dataObjectState = localState.getDataObjectState();
+        final TornadoXPUDevice device = meta().getLogicDevice();
+        final XPUDeviceBufferState deviceState = dataObjectState.getDeviceBufferState(device);
+        deviceState.setPartialCopySize(partialCopySize);
+        if (deviceState.isLockedBuffer()) {
+            return device.resolveEvent(executionPlanId, device.streamOutBlocking(executionPlanId, object, offset, deviceState, null));
+        }
+        return null;
+    }
+
+    private Event syncObjectInnerLazy(Object object, long hostOffset, long bufferSize) {
+        final LocalObjectState localState = executionContext.getLocalStateObject(object);
+        final DataObjectState dataObjectState = localState.getDataObjectState();
+        final TornadoXPUDevice device = meta().getLogicDevice();
+        final XPUDeviceBufferState deviceBufferState = dataObjectState.getDeviceBufferState(device);
+        if (deviceBufferState.isLockedBuffer()) {
+            deviceBufferState.getXPUBuffer().setSizeSubRegion(bufferSize);
+            return device.resolveEvent(executionPlanId, device.streamOutBlocking(executionPlanId, object, hostOffset, deviceBufferState, null));
         }
         return null;
     }
 
     private Event syncParameter(Object object) {
-        Event eventParameter = syncObjectInner(object);
+        Event eventParameter = null;
+        if (batchSizeBytes != TornadoExecutionContext.INIT_VALUE) {
+            BatchConfiguration batchConfiguration = BatchConfiguration.computeChunkSizes(executionContext, batchSizeBytes);
+            long hostOffset = 0;
+            for (int i = 0; i < batchConfiguration.getTotalChunks(); i++) {
+                hostOffset = (batchSizeBytes * i);
+                eventParameter = syncObjectInnerLazy(object, hostOffset, batchSizeBytes);
+            }
+            // Last chunk
+            if (batchConfiguration.getRemainingChunkSize() != 0) {
+                hostOffset += batchSizeBytes;
+                eventParameter = syncObjectInnerLazy(object, hostOffset, batchConfiguration.getRemainingChunkSize());
+            }
+        } else {
+            eventParameter = syncObjectInner(object);
+        }
+        if (eventParameter != null) {
+            eventParameter.waitOn();
+        }
+        return eventParameter;
+    }
+
+    private Event syncParameter(Object object, long offset, long partialCopySize) {
+        Event eventParameter = syncObjectInner(object, offset, partialCopySize);
         if (eventParameter != null) {
             eventParameter.waitOn();
         }
@@ -1082,14 +1176,45 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                     continue;
                 }
                 long value = timeProfiler.getTimer(ProfilerType.COPY_OUT_TIME_SYNC);
-                eventParameter.waitForEvents();
+                eventParameter.waitForEvents(executionPlanId);
                 value += eventParameter.getElapsedTime();
                 timeProfiler.setTimer(ProfilerType.COPY_OUT_TIME_SYNC, value);
-                LocalObjectState localState = executionContext.getObjectState(objects[i]);
-                DeviceObjectState deviceObjectState = localState.getGlobalState().getDeviceState(meta().getLogicDevice());
-                timeProfiler.addValueToMetric(ProfilerType.COPY_OUT_SIZE_BYTES_SYNC, TimeProfiler.NO_TASK_NAME, deviceObjectState.getObjectBuffer().size());
+                LocalObjectState localState = executionContext.getLocalStateObject(objects[i]);
+                XPUDeviceBufferState deviceObjectState = localState.getDataObjectState().getDeviceBufferState(meta().getLogicDevice());
+                timeProfiler.addValueToMetric(ProfilerType.COPY_OUT_SIZE_BYTES_SYNC, TimeProfiler.NO_TASK_NAME, deviceObjectState.getXPUBuffer().size());
             }
             updateProfiler();
+        }
+    }
+
+    @Override
+    public void syncRuntimeTransferToHost(Object object, long offset, long partialCopySize) {
+
+        if (vm == null) {
+            return;
+        }
+
+        Event event = null;
+
+        // Check if it is an argument captured by the scope (not in the parameter list).
+        if (!argumentsLookUp.contains(object)) {
+            syncField(object);
+        } else {
+            event = syncParameter(object, offset, partialCopySize);
+        }
+
+        if (TornadoOptions.isProfilerEnabled()) {
+            timeProfiler.clean();
+            if (event != null) {
+                long value = timeProfiler.getTimer(ProfilerType.COPY_OUT_TIME_SYNC);
+                event.waitForEvents(executionPlanId);
+                value += event.getElapsedTime();
+                timeProfiler.setTimer(ProfilerType.COPY_OUT_TIME_SYNC, value);
+                LocalObjectState localState = executionContext.getLocalStateObject(object);
+                XPUDeviceBufferState deviceObjectState = localState.getDataObjectState().getDeviceBufferState(meta().getLogicDevice());
+                timeProfiler.addValueToMetric(ProfilerType.COPY_OUT_SIZE_BYTES_SYNC, TimeProfiler.NO_TASK_NAME, deviceObjectState.getXPUBuffer().size());
+                updateProfiler();
+            }
         }
     }
 
@@ -1152,16 +1277,14 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     private boolean checkAllArgumentsPerTask() {
         for (TaskPackage task : taskPackages) {
             Object[] taskParameters = task.getTaskParameters();
-            // Note: the first element in the object list is a lambda expression
-            // (computation)
+            // Note: the first element in the object list is a lambda expression (computation)
             for (int i = 1; i < (taskParameters.length - 1); i++) {
                 Object parameter = taskParameters[i];
                 if (isArgumentIgnorable(parameter)) {
                     continue;
                 }
                 if (!argumentsLookUp.contains(parameter)) {
-                    throw new TornadoTaskRuntimeException("Parameter #" + i + " <" + parameter + "> from task <" + task
-                            .getId() + "> not specified either in transferToDevice or transferToHost functions");
+                    throw new TornadoTaskRuntimeException(STR."Parameter #\{i} <\{parameter}> from task <\{task.getId()}> not specified either in transferToDevice or transferToHost functions");
                 }
             }
         }
@@ -1186,66 +1309,100 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     private void setupProfiler() {
-        if (timeProfiler == null) {
-            if (TornadoOptions.isProfilerEnabled()) {
-                this.timeProfiler = new TimeProfiler();
-            } else {
-                this.timeProfiler = new EmptyProfiler();
-            }
-            executionContext.withProfiler(timeProfiler);
-            for (SchedulableTask task : executionContext.getTasks()) {
-                logTaskMethodHandle(task);
-            }
+        if (isProfilerEnabled()) {
+            this.timeProfiler = new TimeProfiler();
+        } else {
+            this.timeProfiler = new EmptyProfiler();
+        }
+        executionContext.withProfiler(timeProfiler);
+        for (SchedulableTask task : executionContext.getTasks()) {
+            logTaskMethodHandle(task);
         }
     }
 
-    @Override
-    public TornadoTaskGraphInterface schedule() {
+    private void bailout() {
+        if (!TornadoOptions.RECOVER_BAILOUT) {
+            throw new TornadoBailoutRuntimeException("[TornadoVM] Error - Recover option disabled");
+        } else {
+            runAllTasksJavaSequential();
+        }
+    }
 
-        setupProfiler();
-        isFinished = false;
+    private TornadoTaskGraphInterface execute() {
+
+        // check if bailout due to task-rewriting
         if (bailout) {
-            if (!TornadoOptions.RECOVER_BAILOUT) {
-                throw new TornadoBailoutRuntimeException("[TornadoVM] Error - Recover option disabled");
-            } else {
-                runAllTasksJavaSequential();
-                return this;
-            }
+            bailout();
         }
 
+        isFinished = false;
+        setupProfiler();
         timeProfiler.clean();
         timeProfiler.start(ProfilerType.TOTAL_TASK_GRAPH_TIME);
 
-        TornadoTaskGraphInterface executionGraph = null;
+        // Single context ID per execution plan.
+        // This is used to create/obtain low-level command queues from the driver
+        // and other resources (e.g., Level Zero Command Lists).
+        executionContext.setExecutionPlanId(executionPlanId);
+
+        TornadoTaskGraphInterface reduceTaskGraph = null;
         if (TornadoOptions.EXPERIMENTAL_REDUCE && !(getId().startsWith(TASK_GRAPH_PREFIX))) {
-            executionGraph = analyzeSkeletonAndRun();
+            reduceTaskGraph = analyzeSkeletonAndRun();
         }
 
-        if (executionGraph != null) {
-            return executionGraph;
+        if (reduceTaskGraph != null) {
+            return reduceTaskGraph;
         }
 
         // check parameter list
         if (TornadoOptions.FORCE_CHECK_PARAMETERS) {
-            try {
-                checkAllArgumentsPerTask();
-            } catch (TornadoTaskRuntimeException e) {
-                throw new TornadoTaskRuntimeException(e.toString());
-            }
+            checkAllArgumentsPerTask();
         }
 
         lockInPendingFieldsObjects();
-
         analysisTaskGraph = null;
-        scheduleInner();
-        cleanUp();
+
+        try {
+            scheduleInner();
+            cleanUp();
+        } catch (TornadoRuntimeException e) {
+            bailout();
+        }
         return this;
     }
 
     @Override
-    public TornadoTaskGraphInterface schedule(GridScheduler gridScheduler) {
-        this.gridScheduler = gridScheduler;
-        return schedule();
+    public TornadoTaskGraphInterface execute(ExecutorFrame executionPackage) {
+        executionPlanId = executionPackage.getExecutionPlanId();
+        if (executionPackage.getDynamicReconfigurationPolicy() == null) {
+            return execute();
+        } else {
+            if (executionPackage.getDRMode() == DRMode.SERIAL) {
+                return scheduleDynamicReconfigurationSequential(executionPackage.getDynamicReconfigurationPolicy());
+            } else if (executionPackage.getDRMode() == DRMode.PARALLEL) {
+                return scheduleDynamicReconfigurationParallel(executionPackage.getDynamicReconfigurationPolicy());
+            }
+            throw new TornadoRuntimeException("");
+        }
+    }
+
+    private boolean isTaskNamePresent(String taskName) {
+        for (TaskPackage taskPackage : taskPackages) {
+            if (taskName.equals(STR."\{taskGraphName}.\{taskPackage.getId()}")) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private void checkGridSchedulerNames() {
+        Set<String> gridTaskNames = gridScheduler.keySet();
+        for (String gridName : gridTaskNames) {
+            if (!isTaskNamePresent(gridName)) {
+                throw new TornadoRuntimeException(STR."[ERROR] Grid scheduler with name \{gridName} not found in the Task-Graph");
+            }
+        }
+
     }
 
     @SuppressWarnings("unchecked")
@@ -1300,43 +1457,43 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             case 10:
                 @SuppressWarnings("rawtypes") Task10 task10 = (Task10) taskPackage.getTaskParameters()[0];
                 task10.apply(taskPackage.getTaskParameters()[1], taskPackage.getTaskParameters()[2], taskPackage.getTaskParameters()[3], taskPackage.getTaskParameters()[4], taskPackage
-                        .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
+                                .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
                         taskPackage.getTaskParameters()[10]);
                 break;
             case 11:
                 @SuppressWarnings("rawtypes") Task11 task11 = (Task11) taskPackage.getTaskParameters()[0];
                 task11.apply(taskPackage.getTaskParameters()[1], taskPackage.getTaskParameters()[2], taskPackage.getTaskParameters()[3], taskPackage.getTaskParameters()[4], taskPackage
-                        .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
+                                .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
                         taskPackage.getTaskParameters()[10], taskPackage.getTaskParameters()[11]);
                 break;
             case 12:
                 @SuppressWarnings("rawtypes") Task12 task12 = (Task12) taskPackage.getTaskParameters()[0];
                 task12.apply(taskPackage.getTaskParameters()[1], taskPackage.getTaskParameters()[2], taskPackage.getTaskParameters()[3], taskPackage.getTaskParameters()[4], taskPackage
-                        .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
+                                .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
                         taskPackage.getTaskParameters()[10], taskPackage.getTaskParameters()[11], taskPackage.getTaskParameters()[12]);
                 break;
             case 13:
                 @SuppressWarnings("rawtypes") Task13 task13 = (Task13) taskPackage.getTaskParameters()[0];
                 task13.apply(taskPackage.getTaskParameters()[1], taskPackage.getTaskParameters()[2], taskPackage.getTaskParameters()[3], taskPackage.getTaskParameters()[4], taskPackage
-                        .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
+                                .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
                         taskPackage.getTaskParameters()[10], taskPackage.getTaskParameters()[11], taskPackage.getTaskParameters()[12], taskPackage.getTaskParameters()[13]);
                 break;
             case 14:
                 @SuppressWarnings("rawtypes") Task14 task14 = (Task14) taskPackage.getTaskParameters()[0];
                 task14.apply(taskPackage.getTaskParameters()[1], taskPackage.getTaskParameters()[2], taskPackage.getTaskParameters()[3], taskPackage.getTaskParameters()[4], taskPackage
-                        .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
+                                .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
                         taskPackage.getTaskParameters()[10], taskPackage.getTaskParameters()[11], taskPackage.getTaskParameters()[12], taskPackage.getTaskParameters()[13], taskPackage
                                 .getTaskParameters()[14]);
                 break;
             case 15:
                 @SuppressWarnings("rawtypes") Task15 task15 = (Task15) taskPackage.getTaskParameters()[0];
                 task15.apply(taskPackage.getTaskParameters()[1], taskPackage.getTaskParameters()[2], taskPackage.getTaskParameters()[3], taskPackage.getTaskParameters()[4], taskPackage
-                        .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
+                                .getTaskParameters()[5], taskPackage.getTaskParameters()[6], taskPackage.getTaskParameters()[7], taskPackage.getTaskParameters()[8], taskPackage.getTaskParameters()[9],
                         taskPackage.getTaskParameters()[10], taskPackage.getTaskParameters()[11], taskPackage.getTaskParameters()[12], taskPackage.getTaskParameters()[13], taskPackage
                                 .getTaskParameters()[14], taskPackage.getTaskParameters()[15]);
                 break;
             default:
-                throw new TornadoRuntimeException("Sequential Runner not supported yet. Number of parameters: " + type);
+                throw new TornadoRuntimeException(STR."Sequential Runner not supported yet. Number of parameters: \{type}");
         }
     }
 
@@ -1362,35 +1519,43 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 deviceWinnerIndex = position;
                 break;
             default:
-                throw new TornadoDynamicReconfigurationException("Policy " + policy + " not defined yet");
+                throw new TornadoDynamicReconfigurationException(STR."Policy \{policy} not defined yet");
         }
 
         return deviceWinnerIndex;
     }
 
-    private int syncWinner(Thread[] threads) {
+    public record Tuple2(int threadWinnerIndex, Thread join) {
+    }
+
+    private Tuple2 syncWinner(Thread[] threads) {
         int winner = 0;
         boolean isAlive = true;
+        Thread join = null;
         while (isAlive) {
-
             for (int i = 0; i < threads.length; i++) {
                 isAlive = threads[i].isAlive();
                 if (!isAlive) {
-                    if (TornadoOptions.DEBUG_POLICY) {
-                        System.out.println("Thread " + threads[i].getName() + " finished");
+                    if (Tornado.DEBUG) {
+                        System.out.println(STR."SELECTED Thread-Device: \{threads[i].getName()} ");
                     }
                     winner = i;
-                    // kill the others
-                    for (int j = 0; j < threads.length; j++) {
-                        if (i != j) {
-                            threads[j].interrupt();
+                    join = new Thread(() -> {
+                        // kill the others
+                        for (Thread thread : threads) {
+                            if (thread.isAlive()) {
+                                try {
+                                    thread.join();
+                                } catch (InterruptedException e) {
+                                    throw new RuntimeException(e);
+                                }
+                            }
                         }
-                    }
-                    break;
+                    });
                 }
             }
         }
-        return winner;
+        return new Tuple2(winner, join);
     }
 
     private void runAllTasksJavaSequential() {
@@ -1399,20 +1564,22 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         }
     }
 
-    private void runParallelSequential(Policy policy, Thread[] threads, int indexSequential, Timer timer, long[] totalTimers) {
+    private void runThreadSequentialVersion(Policy policy, Thread[] threads, int indexSequential, Timer timer, long[] totalTimers) {
         // Last Thread runs the sequential code
         threads[indexSequential] = new Thread(() -> {
-            long start = System.currentTimeMillis();
+            Thread.currentThread().setName("Thread-sequential");
+
             if (policy == Policy.PERFORMANCE) {
-                for (int k = 0; k < PERFORMANCE_WARMUP; k++) {
+                for (int k = 0; k < MAX_ITERATIONS_DYNAMIC_RECONF_SEQUENTIAL; k++) {
                     runAllTasksJavaSequential();
                 }
-                start = timer.time();
             }
+
+            final long start = timer.time();
+            runAllTasksJavaSequential();
             final long endSequentialCode = timer.time();
-            Thread.currentThread().setName("Thread-sequential");
-            if (TornadoOptions.DEBUG_POLICY) {
-                System.out.println("Seq finished: " + Thread.currentThread().getName());
+            if (Tornado.DEBUG) {
+                System.out.println(STR."Seq finished: \{Thread.currentThread().getName()}");
             }
 
             totalTimers[indexSequential] = (endSequentialCode - start);
@@ -1426,9 +1593,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 String newTaskScheduleName = TASK_GRAPH_PREFIX + taskScheduleNumber;
                 TaskGraph task = new TaskGraph(newTaskScheduleName);
 
-                Thread.currentThread().setName("Thread-DEV: " + TornadoRuntime.getTornadoRuntime().getDriver(0).getDevice(taskScheduleNumber).getPhysicalDevice().getDeviceName());
-
-                long start = timer.time();
+                Thread.currentThread().setName(STR."Thread-DEV: \{TornadoRuntime.getTornadoRuntime().getBackend(0).getDevice(taskScheduleNumber).getPhysicalDevice().getDeviceName()}");
 
                 for (StreamingObject streamingObject : inputModesObjects) {
                     performStreamInObject(task, streamingObject.object, streamingObject.mode);
@@ -1436,9 +1601,9 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
                 for (TaskPackage taskPackage : taskPackages) {
                     String taskID = taskPackage.getId();
-                    TornadoRuntime.setProperty(newTaskScheduleName + "." + taskID + ".device", "0:" + taskScheduleNumber);
+                    TornadoRuntime.setProperty(STR."\{newTaskScheduleName}.\{taskID}.device", STR."0:\{taskScheduleNumber}");
                     if (Tornado.DEBUG) {
-                        System.out.println("SET DEVICE: " + newTaskScheduleName + "." + taskID + ".device=0:" + taskScheduleNumber);
+                        System.out.println(STR."SET DEVICE: \{newTaskScheduleName}.\{taskID}.device=0:\{taskScheduleNumber}");
                     }
                     task.addTask(taskPackage);
                 }
@@ -1446,19 +1611,18 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 for (StreamingObject streamingObject : outputModeObjects) {
                     performStreamOutThreads(streamingObject.mode, task, streamingObject.object);
                 }
-                // performStreamOutThreads(task, streamOutObjects);
 
                 ImmutableTaskGraph immutableTaskGraph = task.snapshot();
                 TornadoExecutionPlan executor = new TornadoExecutionPlan(immutableTaskGraph);
-                executor.execute();
 
                 if (policy == Policy.PERFORMANCE) {
                     // first warm up
-                    for (int k = 0; k < PERFORMANCE_WARMUP; k++) {
+                    for (int k = 0; k < PERFORMANCE_WARMUP_DYNAMIC_RECONF_PARALLEL; k++) {
                         executor.execute();
                     }
-                    start = timer.time();
                 }
+
+                long start = timer.time();
                 executor.execute();
                 final long end = timer.time();
                 taskGraphIndex.put(taskScheduleNumber, task);
@@ -1470,7 +1634,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                     globalTaskGraphIndex.put(taskScheduleNumber, task);
                 }
 
-                totalTimers[taskScheduleNumber] = end - start;
+                totalTimers[taskScheduleNumber] = (end - start);
             });
         }
 
@@ -1479,18 +1643,17 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     private void runScheduleWithParallelProfiler(Policy policy) {
 
         final Timer timer = (TIME_IN_NANOSECONDS) ? new NanoSecTimer() : new MilliSecTimer();
-        TornadoDriver tornadoDriver = TornadoCoreRuntime.getTornadoRuntime().getDriver(DEFAULT_DRIVER_INDEX);
+        TornadoBackend tornadoDriver = TornadoCoreRuntime.getTornadoRuntime().getBackend(DEFAULT_DRIVER_INDEX);
         int numDevices = tornadoDriver.getDeviceCount();
         long masterThreadID = Thread.currentThread().getId();
 
         // One additional threads is reserved for sequential CPU execution
         final int numThreads = numDevices + 1;
-        final int indexSequential = numDevices;
         Thread[] threads = new Thread[numThreads];
         long[] totalTimers = new long[numThreads];
 
         // Last Thread runs the sequential code
-        runParallelSequential(policy, threads, indexSequential, timer, totalTimers);
+        runThreadSequentialVersion(policy, threads, numDevices, timer, totalTimers);
 
         // Run all task schedules in parallel
         runParallelTaskGraphs(numDevices, threads, timer, policy, totalTimers);
@@ -1502,25 +1665,27 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
         // Define the winner, based on the first thread to finish
         if (policy == Policy.LATENCY) {
-            int deviceWinnerIndex = syncWinner(threads);
-            policyTimeTable.put(policy, deviceWinnerIndex);
-        }
-
-        // JOIN
-        for (Thread t : threads) {
-            try {
-                t.join();
-            } catch (InterruptedException e) {
-                throw new TornadoDynamicReconfigurationException(e);
+            Tuple2 tuple = syncWinner(threads);
+            int deviceWinnerIndex = tuple.threadWinnerIndex;
+            tuple.join.start();
+            policyTimeTable.put(Policy.LATENCY, deviceWinnerIndex);
+        } else {
+            // JOIN for the PERFORMANCE and END_TO_END policies.
+            for (Thread t : threads) {
+                try {
+                    t.join();
+                } catch (InterruptedException e) {
+                    throw new TornadoDynamicReconfigurationException(e);
+                }
             }
         }
 
         if ((policy == Policy.PERFORMANCE || policy == Policy.END_2_END) && (masterThreadID == Thread.currentThread().getId())) {
             int deviceWinnerIndex = synchronizeWithPolicy(policy, totalTimers);
             policyTimeTable.put(policy, deviceWinnerIndex);
-            if (TornadoOptions.DEBUG_POLICY) {
+            if (Tornado.DEBUG) {
                 System.out.println(getListDevices());
-                System.out.println("BEST Position: #" + deviceWinnerIndex + " " + Arrays.toString(totalTimers));
+                System.out.println(STR."BEST Position: #\{deviceWinnerIndex} \{Arrays.toString(totalTimers)}");
             }
         }
     }
@@ -1538,7 +1703,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         performStreamInObject(taskToCompile, streamInObjects, DataTransferMode.EVERY_EXECUTION);
         for (TaskPackage taskPackage : taskPackages) {
             String taskID = taskPackage.getId();
-            TornadoRuntime.setProperty(newTaskScheduleName + "." + taskID + ".device", "0:" + deviceWinnerIndex);
+            TornadoRuntime.setProperty(STR."\{newTaskScheduleName}.\{taskID}.device", STR."0:\{deviceWinnerIndex}");
             taskToCompile.addTask(taskPackage);
         }
         performStreamOutThreads(DataTransferMode.EVERY_EXECUTION, taskToCompile, streamOutObjects);
@@ -1547,10 +1712,10 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
     private void runTaskGraphParallelSelected(int deviceWinnerIndex) {
         for (TaskPackage taskPackage : taskPackages) {
-            TornadoRuntime.setProperty(this.getTaskGraphName() + "." + taskPackage.getId() + ".device", "0:" + deviceWinnerIndex);
+            TornadoRuntime.setProperty(STR."\{this.getTaskGraphName()}.\{taskPackage.getId()}.device", STR."0:\{deviceWinnerIndex}");
         }
-        if (TornadoOptions.DEBUG_POLICY) {
-            System.out.println("Running in parallel device: " + deviceWinnerIndex);
+        if (Tornado.DEBUG) {
+            System.out.println(STR."Running in parallel device: \{deviceWinnerIndex}");
         }
         TaskGraph task = taskGraphIndex.get(deviceWinnerIndex);
         if (task == null) {
@@ -1569,14 +1734,13 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         executor.execute();
     }
 
-    @Override
-    public TornadoTaskGraphInterface scheduleWithProfile(Policy policy) {
+    private TornadoTaskGraphInterface scheduleDynamicReconfigurationParallel(Policy policy) {
         if (policyTimeTable.get(policy) == null) {
             runScheduleWithParallelProfiler(policy);
         } else {
             // Run with the winner device
             int deviceWinnerIndex = policyTimeTable.get(policy);
-            if (deviceWinnerIndex >= TornadoRuntime.getTornadoRuntime().getDriver(0).getDeviceCount()) {
+            if (deviceWinnerIndex >= TornadoRuntime.getTornadoRuntime().getBackend(0).getDeviceCount()) {
                 runSequential();
             } else {
                 runTaskGraphParallelSelected(deviceWinnerIndex);
@@ -1598,7 +1762,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     @SuppressWarnings("unused")
     private void cloneInputOutputObjects() {
         final long startSearchProfiler = (TIME_IN_NANOSECONDS) ? System.nanoTime() : System.currentTimeMillis();
-        TornadoDriver tornadoDriver = TornadoCoreRuntime.getTornadoRuntime().getDriver(DEFAULT_DRIVER_INDEX);
+        TornadoBackend tornadoDriver = TornadoCoreRuntime.getTornadoRuntime().getBackend(DEFAULT_DRIVER_INDEX);
         int numDevices = tornadoDriver.getDeviceCount();
         // Clone objects (only outputs) for each device
         for (int deviceNumber = 0; deviceNumber < numDevices; deviceNumber++) {
@@ -1627,13 +1791,12 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     private void runSequentialTaskGraph(Policy policy, Timer timer, long[] totalTimers, int indexSequential) {
-        long startSequential = timer.time();
         if (policy == Policy.PERFORMANCE) {
-            for (int k = 0; k < PERFORMANCE_WARMUP; k++) {
+            for (int k = 0; k < MAX_ITERATIONS_DYNAMIC_RECONF_SEQUENTIAL; k++) {
                 runAllTasksJavaSequential();
             }
-            startSequential = timer.time();
         }
+        long startSequential = timer.time();
         runAllTasksJavaSequential();
         final long endSequentialCode = timer.time();
         totalTimers[indexSequential] = (endSequentialCode - startSequential);
@@ -1647,7 +1810,6 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             String newTaskScheduleName = TASK_GRAPH_PREFIX + taskNumber;
             TaskGraph task = new TaskGraph(newTaskScheduleName);
 
-            long start = timer.time();
             for (StreamingObject streamingObject : inputModesObjects) {
                 performStreamInObject(task, streamingObject.object, streamingObject.mode);
             }
@@ -1656,7 +1818,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             for (TaskPackage taskPackage : taskPackages) {
                 String taskID = taskPackage.getId();
 
-                String name = newTaskScheduleName + "." + taskID;
+                String name = STR."\{newTaskScheduleName}.\{taskID}";
                 for (String s : ignoreTaskNames) {
                     if (s.equals(name)) {
                         totalTimers[taskNumber] = Long.MAX_VALUE;
@@ -1665,9 +1827,9 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                     }
                 }
 
-                TornadoRuntime.setProperty(newTaskScheduleName + "." + taskID + ".device", "0:" + taskNumber);
+                TornadoRuntime.setProperty(STR."\{newTaskScheduleName}.\{taskID}.device", "0:" + taskNumber);
                 if (Tornado.DEBUG) {
-                    System.out.println("SET DEVICE: " + newTaskScheduleName + "." + taskID + ".device=0:" + taskNumber);
+                    System.out.println(STR."SET DEVICE: \{newTaskScheduleName}.\{taskID}.device=0:\{taskNumber}");
                 }
                 task.addTask(taskPackage);
             }
@@ -1681,16 +1843,16 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
             ImmutableTaskGraph immutableTaskGraph = task.snapshot();
             TornadoExecutionPlan executor = new TornadoExecutionPlan(immutableTaskGraph);
-            executor.execute();
 
             if (policy == Policy.PERFORMANCE) {
-                for (int k = 0; k < PERFORMANCE_WARMUP; k++) {
+                for (int k = 0; k < PERFORMANCE_WARMUP_DYNAMIC_RECONF_PARALLEL; k++) {
                     executor.execute();
                 }
-                start = timer.time();
             }
 
+            final long start = timer.time();
             executor.execute();
+            final long end = timer.time();
             taskGraphIndex.put(taskNumber, task);
 
             // TaskSchedules Global
@@ -1701,7 +1863,6 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 globalTaskGraphIndex.put(taskNumber, task);
             }
 
-            final long end = timer.time();
             totalTimers[taskNumber] = end - start;
         }
     }
@@ -1746,27 +1907,17 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     private String getListDevices() {
         StringBuilder str = new StringBuilder();
         str.append("                  : [");
-        int num = TornadoRuntime.getTornadoRuntime().getDriver(0).getDeviceCount();
+        int num = TornadoRuntime.getTornadoRuntime().getBackend(0).getDeviceCount();
         for (int i = 0; i < num; i++) {
-            TornadoDeviceType deviceType = TornadoRuntime.getTornadoRuntime().getDriver(0).getDevice(i).getDeviceType();
-            String type;
-            switch (deviceType) {
-                case CPU:
-                    type = "CPU  ";
-                    break;
-                case GPU:
-                    type = "GPU  ";
-                    break;
-                case FPGA:
-                    type = "FPGA  ";
-                    break;
-                case ACCELERATOR:
-                    type = "ACCELERATOR";
-                    break;
-                default:
-                    type = "JAVA";
-            }
-            str.append(type).append(" ").append(",");
+            TornadoDeviceType deviceType = TornadoRuntime.getTornadoRuntime().getBackend(0).getDevice(i).getDeviceType();
+            String type = switch (deviceType) {
+                case CPU -> "CPU";
+                case GPU -> "GPU";
+                case FPGA -> "FPGA";
+                case ACCELERATOR -> "ACCELERATOR";
+                default -> "JAVA";
+            };
+            str.append(type).append(",").append("\t ");
         }
         str.append("JVM]");
         return str.toString();
@@ -1774,7 +1925,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
     private void runWithSequentialProfiler(Policy policy) {
         final Timer timer = (TIME_IN_NANOSECONDS) ? new NanoSecTimer() : new MilliSecTimer();
-        int numDevices = TornadoCoreRuntime.getTornadoRuntime().getDriver(DEFAULT_DRIVER_INDEX).getDeviceCount();
+        int numDevices = TornadoCoreRuntime.getTornadoRuntime().getBackend(DEFAULT_DRIVER_INDEX).getDeviceCount();
         final int totalTornadoDevices = numDevices + 1;
         long[] totalTimers = new long[totalTornadoDevices];
 
@@ -1790,9 +1941,9 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
             updateHistoryTables(policy, deviceWinnerIndex);
 
-            if (TornadoOptions.DEBUG_POLICY) {
+            if (Tornado.DEBUG) {
                 System.out.println(getListDevices());
-                System.out.println("BEST Position: #" + deviceWinnerIndex + " " + Arrays.toString(totalTimers));
+                System.out.println(STR."BEST Position: #\{deviceWinnerIndex} \{Arrays.toString(totalTimers)}");
             }
         }
     }
@@ -1827,7 +1978,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
      * @return max size of all input arrays.
      */
     private int getMaxInputSize() {
-        Object[] parameters = taskPackages.get(0).getTaskParameters();
+        Object[] parameters = taskPackages.getFirst().getTaskParameters();
         int size = 0;
         for (int i = 1; i < parameters.length; i++) {
             Object o = parameters[i];
@@ -1841,9 +1992,16 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         return size;
     }
 
-    @Override
-    public TornadoTaskGraphInterface scheduleWithProfileSequential(Policy policy) {
-        int numDevices = TornadoRuntime.getTornadoRuntime().getDriver(DEFAULT_DRIVER_INDEX).getDeviceCount();
+    private TornadoTaskGraphInterface scheduleDynamicReconfigurationSequential(Policy policy) {
+
+        if (policy == Policy.LATENCY) {
+            if (Tornado.DEBUG) {
+                System.out.println("[WARNING]: LATENCY policy using the DRMode.SERIAL is not allowed. Changing to PERFORMANCE mode");
+            }
+            policy = Policy.PERFORMANCE;
+        }
+
+        int numDevices = TornadoRuntime.getTornadoRuntime().getBackend(DEFAULT_DRIVER_INDEX).getDeviceCount();
 
         if (policyTimeTable.get(policy) == null) {
             runWithSequentialProfiler(policy);
@@ -1855,8 +2013,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             // Run with the winner device
             int deviceWinnerIndex = policyTimeTable.get(policy);
             if (deviceWinnerIndex >= numDevices) {
-                // if the winner is the last index => it is the sequential
-                // (HotSpot)
+                // if the winner is the last index => it is the sequential (HotSpot)
                 runSequential();
             } else {
                 // Otherwise, it runs the parallel in the corresponding device
@@ -1926,11 +2083,11 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                         parameters[7], parameters[8], parameters[9], parameters[10], parameters[11], parameters[12], parameters[13], parameters[14], parameters[15]));
                 break;
             default:
-                throw new TornadoRuntimeException("Task not supported yet. Type: " + type);
+                throw new TornadoRuntimeException(STR."Task not supported yet. Type: \{type}");
         }
     }
 
-    @SuppressWarnings({ "rawtypes", "unchecked" })
+    @SuppressWarnings({"rawtypes", "unchecked"})
     private void addInner(int type, Method method, ScheduleMetaData meta, String id, Object[] parameters) {
         switch (type) {
             case 0:
@@ -1990,7 +2147,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                         parameters[8], parameters[9], parameters[10], parameters[11], parameters[12], parameters[13], parameters[14], parameters[15]));
                 break;
             default:
-                throw new TornadoRuntimeException("Task not supported yet. Type: " + type);
+                throw new TornadoRuntimeException(STR."Task not supported yet. Type: \{type}");
         }
     }
 
@@ -2049,39 +2206,43 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     @Override
-    public void addPrebuiltTask(String id, String entryPoint, String filename, Object[] args, Access[] accesses, TornadoDevice device, int[] dimensions) {
-        addInner(TaskUtils.createTask(meta(), id, entryPoint, filename, args, accesses, device, dimensions));
+    public void addPrebuiltTask(TaskPackage taskPackage) {
+        taskPackages.add(taskPackage);
+        PrebuiltTaskPackage prebuiltTaskPackage = (PrebuiltTaskPackage) taskPackage;
+        addInner(TaskUtils.createTask(meta(), prebuiltTaskPackage));
     }
 
     @Override
-    public void addPrebuiltTask(String id, String entryPoint, String filename, Object[] args, Access[] accesses, TornadoDevice device, int[] dimensions, int[] atomics) {
-        addInner(TaskUtils.createTask(meta(), id, entryPoint, filename, args, accesses, device, dimensions, atomics));
+    public void withBatch(String batchSize) {
+        this.batchSizeBytes = parseSizeToBytes(batchSize);
+        executionContext.setBatchSize(this.batchSizeBytes);
     }
 
     @Override
-    public void addScalaTask(String id, Object function, Object[] args) {
-        addInner(TaskUtils.scalaTask(id, function, args));
+    public void withMemoryLimit(String memoryLimit) {
+        this.memoryLimitSizeBytes = parseSizeToBytes(memoryLimit);
+        executionContext.setExecutionPlanMemoryLimit(this.memoryLimitSizeBytes);
     }
 
     @Override
-    public void batch(String batchSize) {
+    public void withoutMemoryLimit() {
+        executionContext.setExecutionPlanMemoryLimit(TornadoExecutionContext.INIT_VALUE);
+    }
 
-        // parse value and units
-        Matcher matcher = PATTERN_BATCH.matcher(batchSize);
-        long value = 0;
-        String units = null;
-        if (matcher.find()) {
-            value = Long.parseLong(matcher.group(1));
-            units = matcher.group(2).toUpperCase();
+    private long parseSizeToBytes(String sizeStr) {
+        Matcher matcher = SIZE_PATTERN.matcher(sizeStr);
+        if (!matcher.find()) {
+            throw new IllegalArgumentException("Invalid size format");
         }
 
-        // compute bytes
-        this.batchSizeBytes = switch (Objects.requireNonNull(units)) {
+        long value = Long.parseLong(matcher.group(1));
+        String units = matcher.group(2).toUpperCase();
+
+        return switch (Objects.requireNonNull(units)) {
             case "MB" -> value * 1_000_000;
             case "GB" -> value * 1_000_000_000;
-            default -> throw new TornadoRuntimeException("Units not supported: " + units);
+            default -> throw new TornadoRuntimeException(STR + "Units not supported: " + units);
         };
-        executionContext.setBatchSize(this.batchSizeBytes);
     }
 
     @Override
@@ -2176,7 +2337,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     boolean isProfilerEnabled() {
-        return timeProfiler != null;
+        return (getProfilerMode() != null || TornadoOptions.isProfilerEnabled());
     }
 
     ProfilerMode getProfilerMode() {
